Design complete. JS finishing left

--- a/index.html
+++ b/index.html
@@ -12,15 +12,147 @@
 
     <main>
         <h1>Weather Checker</h1>
-        <form class="form">
+        <section class='form'>
             <span class='search-box'>
                 <input type="text" name="search" id="search" class="search" placeholder="Type city name here">
                 <button type="button" class="gobtn">Go</button>
             </span>
             <ul class="suggestions"></ul>
-        </form>
+        </section>
 
-        <section class='results'></section>
+        <section class='results'>
+
+            <div class="result">
+                <span class="city">Mumbai, IN</span>
+                <span class="desc">
+                    <span class="desc">Haze</span>
+                    <img class="icon" src="http://openweathermap.org/img/w/50d.png" alt="?">
+                </span>
+                <span class="temp">Temperature : 31.5°C</span>
+                <span class="min-temp">Min: 31°C</span>
+                <span class="max-temp">Max: 32°C</span>
+                <span class="pressure">Pressure: 1006 hPa</span>
+                <span class="humidity">Humidity: 70 %</span>
+            </div>
+
+            <div class="result">
+                <span class="city">Mumbai, IN</span>
+                <span class="desc">
+                    <span class="desc">Haze</span>
+                    <img class="icon" src="http://openweathermap.org/img/w/50d.png" alt="?">
+                </span>
+                <span class="temp">Temperature : 31.5°C</span>
+                <span class="min-temp">Min: 31°C</span>
+                <span class="max-temp">Max: 32°C</span>
+                <span class="pressure">Pressure: 1006 hPa</span>
+                <span class="humidity">Humidity: 70 %</span>
+            </div>
+
+            <div class="result">
+                <span class="city">Mumbai, IN</span>
+                <span class="desc">
+                    <span class="desc">Haze</span>
+                    <img class="icon" src="http://openweathermap.org/img/w/50d.png" alt="?">
+                </span>
+                <span class="temp">Temperature : 31.5°C</span>
+                <span class="min-temp">Min: 31°C</span>
+                <span class="max-temp">Max: 32°C</span>
+                <span class="pressure">Pressure: 1006 hPa</span>
+                <span class="humidity">Humidity: 70 %</span>
+            </div>
+
+            <div class="result">
+                <span class="city">Mumbai, IN</span>
+                <span class="desc">
+                    <span class="desc">Haze</span>
+                    <img class="icon" src="http://openweathermap.org/img/w/50d.png" alt="?">
+                </span>
+                <span class="temp">Temperature : 31.5°C</span>
+                <span class="min-temp">Min: 31°C</span>
+                <span class="max-temp">Max: 32°C</span>
+                <span class="pressure">Pressure: 1006 hPa</span>
+                <span class="humidity">Humidity: 70 %</span>
+            </div>
+
+            <div class="result">
+                <span class="city">Mumbai, IN</span>
+                <span class="desc">
+                    <span class="desc">Haze</span>
+                    <img class="icon" src="http://openweathermap.org/img/w/50d.png" alt="?">
+                </span>
+                <span class="temp">Temperature : 31.5°C</span>
+                <span class="min-temp">Min: 31°C</span>
+                <span class="max-temp">Max: 32°C</span>
+                <span class="pressure">Pressure: 1006 hPa</span>
+                <span class="humidity">Humidity: 70 %</span>
+            </div>
+
+            <div class="result">
+                <span class="city">Mumbai, IN</span>
+                <span class="desc">
+                    <span class="desc">Haze</span>
+                    <img class="icon" src="http://openweathermap.org/img/w/50d.png" alt="?">
+                </span>
+                <span class="temp">Temperature : 31.5°C</span>
+                <span class="min-temp">Min: 31°C</span>
+                <span class="max-temp">Max: 32°C</span>
+                <span class="pressure">Pressure: 1006 hPa</span>
+                <span class="humidity">Humidity: 70 %</span>
+            </div>
+
+            <div class="result">
+                <span class="city">Mumbai, IN</span>
+                <span class="desc">
+                    <span class="desc">Haze</span>
+                    <img class="icon" src="http://openweathermap.org/img/w/50d.png" alt="?">
+                </span>
+                <span class="temp">Temperature : 31.5°C</span>
+                <span class="min-temp">Min: 31°C</span>
+                <span class="max-temp">Max: 32°C</span>
+                <span class="pressure">Pressure: 1006 hPa</span>
+                <span class="humidity">Humidity: 70 %</span>
+            </div>
+
+            <div class="result">
+                <span class="city">Mumbai, IN</span>
+                <span class="desc">
+                    <span class="desc">Haze</span>
+                    <img class="icon" src="http://openweathermap.org/img/w/50d.png" alt="?">
+                </span>
+                <span class="temp">Temperature : 31.5°C</span>
+                <span class="min-temp">Min: 31°C</span>
+                <span class="max-temp">Max: 32°C</span>
+                <span class="pressure">Pressure: 1006 hPa</span>
+                <span class="humidity">Humidity: 70 %</span>
+            </div>
+
+            <div class="result">
+                <span class="city">Mumbai, IN</span>
+                <span class="desc">
+                    <span class="desc">Haze</span>
+                    <img class="icon" src="http://openweathermap.org/img/w/50d.png" alt="?">
+                </span>
+                <span class="temp">Temperature : 31.5°C</span>
+                <span class="min-temp">Min: 31°C</span>
+                <span class="max-temp">Max: 32°C</span>
+                <span class="pressure">Pressure: 1006 hPa</span>
+                <span class="humidity">Humidity: 70 %</span>
+            </div>
+
+            <div class="result">
+                <span class="city">Mumbai, IN</span>
+                <span class="desc">
+                    <span class="desc">Haze</span>
+                    <img class="icon" src="http://openweathermap.org/img/w/50d.png" alt="?">
+                </span>
+                <span class="temp">Temperature : 31.5°C</span>
+                <span class="min-temp">Min: 31°C</span>
+                <span class="max-temp">Max: 32°C</span>
+                <span class="pressure">Pressure: 1006 hPa</span>
+                <span class="humidity">Humidity: 70 %</span>
+            </div>
+
+        </section>
     </main>
 
 
