Design and Functionality ready

--- a/index.html
+++ b/index.html
@@ -1,3 +1,7 @@
+<!-- WEATHER CHECKER APP -->
+<!-- MADE BY: Pragun Saini -->
+<!-- Using OpenWeatherMap API -->
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -6,7 +10,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Weather Checker</title>
 
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="min-style.css">
 </head>
 <body>
 
@@ -20,144 +24,10 @@
             <ul class="suggestions"></ul>
         </section>
 
-        <section class='results'>
-
-            <div class="result">
-                <span class="city">Mumbai, IN</span>
-                <span class="desc">
-                    <span class="desc">Haze</span>
-                    <img class="icon" src="http://openweathermap.org/img/w/50d.png" alt="?">
-                </span>
-                <span class="temp">Temperature : 31.5°C</span>
-                <span class="min-temp">Min: 31°C</span>
-                <span class="max-temp">Max: 32°C</span>
-                <span class="pressure">Pressure: 1006 hPa</span>
-                <span class="humidity">Humidity: 70 %</span>
-            </div>
-
-            <div class="result">
-                <span class="city">Mumbai, IN</span>
-                <span class="desc">
-                    <span class="desc">Haze</span>
-                    <img class="icon" src="http://openweathermap.org/img/w/50d.png" alt="?">
-                </span>
-                <span class="temp">Temperature : 31.5°C</span>
-                <span class="min-temp">Min: 31°C</span>
-                <span class="max-temp">Max: 32°C</span>
-                <span class="pressure">Pressure: 1006 hPa</span>
-                <span class="humidity">Humidity: 70 %</span>
-            </div>
-
-            <div class="result">
-                <span class="city">Mumbai, IN</span>
-                <span class="desc">
-                    <span class="desc">Haze</span>
-                    <img class="icon" src="http://openweathermap.org/img/w/50d.png" alt="?">
-                </span>
-                <span class="temp">Temperature : 31.5°C</span>
-                <span class="min-temp">Min: 31°C</span>
-                <span class="max-temp">Max: 32°C</span>
-                <span class="pressure">Pressure: 1006 hPa</span>
-                <span class="humidity">Humidity: 70 %</span>
-            </div>
-
-            <div class="result">
-                <span class="city">Mumbai, IN</span>
-                <span class="desc">
-                    <span class="desc">Haze</span>
-                    <img class="icon" src="http://openweathermap.org/img/w/50d.png" alt="?">
-                </span>
-                <span class="temp">Temperature : 31.5°C</span>
-                <span class="min-temp">Min: 31°C</span>
-                <span class="max-temp">Max: 32°C</span>
-                <span class="pressure">Pressure: 1006 hPa</span>
-                <span class="humidity">Humidity: 70 %</span>
-            </div>
-
-            <div class="result">
-                <span class="city">Mumbai, IN</span>
-                <span class="desc">
-                    <span class="desc">Haze</span>
-                    <img class="icon" src="http://openweathermap.org/img/w/50d.png" alt="?">
-                </span>
-                <span class="temp">Temperature : 31.5°C</span>
-                <span class="min-temp">Min: 31°C</span>
-                <span class="max-temp">Max: 32°C</span>
-                <span class="pressure">Pressure: 1006 hPa</span>
-                <span class="humidity">Humidity: 70 %</span>
-            </div>
-
-            <div class="result">
-                <span class="city">Mumbai, IN</span>
-                <span class="desc">
-                    <span class="desc">Haze</span>
-                    <img class="icon" src="http://openweathermap.org/img/w/50d.png" alt="?">
-                </span>
-                <span class="temp">Temperature : 31.5°C</span>
-                <span class="min-temp">Min: 31°C</span>
-                <span class="max-temp">Max: 32°C</span>
-                <span class="pressure">Pressure: 1006 hPa</span>
-                <span class="humidity">Humidity: 70 %</span>
-            </div>
-
-            <div class="result">
-                <span class="city">Mumbai, IN</span>
-                <span class="desc">
-                    <span class="desc">Haze</span>
-                    <img class="icon" src="http://openweathermap.org/img/w/50d.png" alt="?">
-                </span>
-                <span class="temp">Temperature : 31.5°C</span>
-                <span class="min-temp">Min: 31°C</span>
-                <span class="max-temp">Max: 32°C</span>
-                <span class="pressure">Pressure: 1006 hPa</span>
-                <span class="humidity">Humidity: 70 %</span>
-            </div>
-
-            <div class="result">
-                <span class="city">Mumbai, IN</span>
-                <span class="desc">
-                    <span class="desc">Haze</span>
-                    <img class="icon" src="http://openweathermap.org/img/w/50d.png" alt="?">
-                </span>
-                <span class="temp">Temperature : 31.5°C</span>
-                <span class="min-temp">Min: 31°C</span>
-                <span class="max-temp">Max: 32°C</span>
-                <span class="pressure">Pressure: 1006 hPa</span>
-                <span class="humidity">Humidity: 70 %</span>
-            </div>
-
-            <div class="result">
-                <span class="city">Mumbai, IN</span>
-                <span class="desc">
-                    <span class="desc">Haze</span>
-                    <img class="icon" src="http://openweathermap.org/img/w/50d.png" alt="?">
-                </span>
-                <span class="temp">Temperature : 31.5°C</span>
-                <span class="min-temp">Min: 31°C</span>
-                <span class="max-temp">Max: 32°C</span>
-                <span class="pressure">Pressure: 1006 hPa</span>
-                <span class="humidity">Humidity: 70 %</span>
-            </div>
-
-            <div class="result">
-                <span class="city">Mumbai, IN</span>
-                <span class="desc">
-                    <span class="desc">Haze</span>
-                    <img class="icon" src="http://openweathermap.org/img/w/50d.png" alt="?">
-                </span>
-                <span class="temp">Temperature : 31.5°C</span>
-                <span class="min-temp">Min: 31°C</span>
-                <span class="max-temp">Max: 32°C</span>
-                <span class="pressure">Pressure: 1006 hPa</span>
-                <span class="humidity">Humidity: 70 %</span>
-            </div>
-
-        </section>
+        <section class='results'></section>
     </main>
 
-
-
-    <script src="weather.js"></script>
-    <script src="cities.js"></script>
+    <script src="min-weather.js"></script>
+    <script src="min-cities.js"></script>
 </body>
 </html>
